--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.6.0
 cycler==0.11.0
 fonttools==4.29.1
 kiwisolver==1.3.2
@@ -7,6 +8,7 @@ packaging==21.3
 pandas==1.4.0
 Pillow==9.0.1
 plotly==5.5.0
+pycodestyle==2.8.0
 pyparsing==3.0.7
 PyQt5==5.15.6
 PyQt5-Qt5==5.15.2
@@ -15,3 +17,4 @@ python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
 tenacity==8.0.1
+toml==0.10.2
